# CartesAPuces

./: README.md  atelierkey.jks
Client/: README.md
Client/CartesAPuces/src/smartcard/: SmartCard.java  Word.java
Client/ClientCartesAPuces/: .classpath  .project  Hough_exec
Client/ClientCartesAPuces/lib/: cacerts.jks  certif.cer
Client/ClientCartesAPuces/src/main/: Functions.java  Main.java  MainLogin.java  MainRegister.java
Client/ClientCartesAPuces/src/smartcard/: SmartCard.java  WordSizeException.java
Client/Security/: ECDSATest.java  SHA256Test.java
Client/TI/facial_reco_c/: .cproject  .project  CMakeLists.txt  faceDetector.cpp  faceDetector.h  facial_recog_hough.cpp  facial_recog_hough.h  histo.txt  main.cpp  main.java  vote_map.cpp  vote_map.h
Client/TI/facial_recog_java/: .project  pom.xml
Client/TI/facial_recog_java/src/libhough/: CMakeCache.txt  Hough_exec  Makefile  cmake_install.cmake
Client/TI/facial_recog_java/src/main/java/org/ucp/facial_recog/: App.java  formTracker.java
Client/TI/facial_recog_java/src/test/java/org/ucp/facial_recog/: AppTest.java
Cours/: smartCard.java
Server/: README.md
Server/API JAVA/: .classpath  .project
Server/API JAVA/WebContent/WEB-INF/: web.xml
Server/API JAVA/src/: AtelierBio.java  FirstTest.java  Main.java
Server/API JAVA/src/com/atelierBio/bean/: Concern.java  Connect.java  Log.java  Session.java  User.java
Server/API JAVA/src/com/atelierBio/connexion/: Connexion.java
Server/API JAVA/src/com/atelierBio/dao/: ConcernDAO.java  ConnectDAO.java  DAO.java  LogDAO.java  SessionDAO.java  UserDAO.java
Server/BDD Postgre SQL/: bdd.sql
